# platt

./: Cargo.toml
platt/: Cargo.toml
platt/src/: db_tables.rs  db_types.rs  lib.rs  query.rs  schema.rs
platt_example/: Cargo.toml  current_schema.json
platt_example/src/: main.rs  manage.rs  models.rs
platt_macros/: Cargo.toml
platt_macros/src/: derive_enum.rs  derive_model.rs  lib.rs
