[package]
name = "platt_macros"
version = "0.1.0"
authors = ["Alex Weiss <alex.m.weiss2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "derive"] }
proc-macro2 = "1.0"
quote = "1.0"
heck = "0.3"
darling = "0.12.2"

[lib]
proc-macro = true